--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>   
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="max-width">
+            <div class="logo"><a href="#">Bhum<span>ika</span></a></div>
+        <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Skill</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+    </nav>
 </body>
 </html>
